[project]
name = "llm-llama-cpp"
version = "0.1a0"
description = "LLM plugin for running models using llama.cpp"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/simonw/llm-llama-cpp"
Changelog = "https://github.com/simonw/llm-llama-cpp/releases"
Issues = "https://github.com/simonw/llm-llama-cpp/issues"
CI = "https://github.com/simonw/llm-llama-cpp/actions"

[project.entry-points.llm]
llama_cpp = "llm_llama_cpp"

[project.optional-dependencies]
test = ["pytest"]
